put -> patch; add name maxLenght; change responses on status 400
